# cs267

./: cs267_hw1_2017.tar
cs267_hw1/: Makefile  benchmark.c  dgemm-blas.c  dgemm-blocked.c  dgemm-naive.c  job-blas  job-blocked  job-naive
hw1-knl/: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  dgemm-blocked.c
hw2-1/: CMakeLists.txt  job-openmp  job-serial  main.cpp  openmp.cpp  serial.cpp
hw2-2/: .gitignore  CMakeLists.txt  common.h  job-mpi  main.cpp  mpi.cpp
hw2-3/: .clang-format  CMakeLists.txt  common.h  gpu.cu  job-gpu  main.cu
hw3/: .clang-format  CMakeLists.txt  README.md  butil.hpp  hash_map.hpp  job-cori-starter  kmer_hash.cpp  kmer_t.hpp  modules.sh  packing.hpp  pkmer_t.hpp  read_kmers.hpp
